--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 title: Coding the Past - learn social data science in R and Python.
 keywords: social data science, python and r, historical data, statistics, data visualization
 description: Use R and Python to analyze historical data and code beautiful visualizations
+last_modified_at: 05-Mar-23
 ---
 <div class="presentation-box">
     <div class="presentation-box-img">
