--- a/about.html
+++ b/about.html
@@ -1,12 +1,13 @@
 ---
 layout: default
 title: About
+last_modified_at: 05-Mar-23
 ---
 
 <div class="intro-contacts">
     <h2>About</h2>
     <br>
-    <p> I am Bruno, I help other historians and social scientists to learn data science. Moreover, I am legislative
+    <p> I am Bruno Ponne, I help other historians and social scientists to learn data science. Moreover, I am legislative
         advisor at the Federal Senate of Brazil, interested in data science and data-driven policies. I hold a master's
         degree in Public Policy from the Hertie School and a Bachelor's in History from the University of Brasília.
     </p>
