--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@ last_modified_at: 05-Mar-23
             </li>
             {% endfor %}
         </ul>
+    <div class="pic_attribution">
+        <sup>*</sup>Cover images are all in public domain (available at Wikimedia Commons) or AI generated.
+    </div>
     </div>
     <div class="empty-space">
 
