--- a/about.html
+++ b/about.html
@@ -1,24 +1,27 @@
 ---
 layout: default
 title: About
-last_modified_at: 05-Mar-23
+last_modified_at: 15-May-23
 ---
 
-<div class="intro-contacts">
-    <h2>About</h2>
-    <br>
-    <p> I am Bruno Ponne, I help other historians and social scientists to learn data science. Moreover, I am legislative
-        advisor at the Federal Senate of Brazil, interested in data science and data-driven policies. I hold a master's
-        degree in Public Policy from the Hertie School and a Bachelor's in History from the University of Brasília.
-    </p>
-    <br>
-    <p>This website unites two of the things I am passionate about: data science and history. Please do not hesitate to
-        contact me. Feedback and suggestions are welcome! &#x1F60A; </p>
+
+
+<div class="about-photo">
+    <img src="/assets/images/bruno_1.png" alt="Bruno Ponne">
+    <div class="intro-contacts">
+        <p> I am Bruno Ponne, I help other historians and social scientists to learn data science. Moreover, I am legislative
+            advisor at the Federal Senate of Brazil, interested in data science and data-driven policies. I hold a master's
+            degree in Public Policy from the Hertie School and a Bachelor's in History from the University of Brasília.
+        </p>
+        <br>
+        <p>This website unites two of the things I am passionate about: data science and history. Please do not hesitate to
+            contact me. Feedback and suggestions are welcome! &#x1F60A; </p>
+    </div>
+    <div class="contacts">
+        <a href="mailto:bruno.ponne@gmail.com?subject=Coding the Past" target="_blank" class="button">Email</a>
+        <a href="https://github.com/bruno-ponne" target="_blank" class="button">GitHub</a>
+        <a href="https://brunoponne.com/" target="_blank" class="button">Personal Portfolio</a>
+        <a href="https://www.linkedin.com/in/bruno-gasparotto-ponne-b6041810" target="_blank" class="button">LinkedIn</a>
+    </div>
 </div>
 
-<div class="contacts">
-    <a href="mailto:bruno.ponne@gmail.com?subject=Coding the Past" target="_blank" class="button">Email</a>
-    <a href="https://github.com/bruno-ponne" target="_blank" class="button">GitHub</a>
-    <a href="https://brunoponne.com/" target="_blank" class="button">Personal Portfolio</a>
-    <a href="https://www.linkedin.com/in/bruno-gasparotto-ponne-b6041810" target="_blank" class="button">LinkedIn</a>
-</div>
