--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 title: Coding the Past - learn social data science in R and Python.
-keywords: social data science, python and r, historical data, statistics, data visualization
-description: Use R and Python to analyze historical data and code beautiful visualizations
-last_modified_at: 05-Mar-23
+keywords: social data science, python and r, historical data, statistics, data visualization, historical datasets, climate data
+description: Explore digital humanities with R and Python. Navigate historical datasets and use data science to enrich your research.
+last_modified_at: 02-Sep-23
 ---
 <div class="presentation-box">
     <div class="presentation-box-img">
@@ -13,10 +13,9 @@ last_modified_at: 05-Mar-23
     </div>
     <div class="intro-text">
         <h1>Data science for all</h1>
-        <p>For a long time, statistical and digital methods were restricted to hard sciences. Fortunately, historians
-            and humanists can now benefit from data science as well. This webpage provides programming lessons on the
-            use of data science in digital humanities. Learn to conduct efficient statistical analyses and show your
-            insights with beautiful visualizations.</p>
+        <p>Once the exclusive domain of hard sciences, statistical and digital methods have now opened their doors to humanists and social scientists. 
+            Welcome to a space dedicated to melding data science with the humanities and social sciences.
+            Dive into our programming lessons, sharpen your analytical skills, and bring your insights to life with effective visualizations and analyses.</p>
     </div>
     <div class="latest-updates">
         <h1>CODING LESSONS</h1>
