changes in the home page and about text

--- a/about.html
+++ b/about.html
@@ -15,8 +15,7 @@ last_modified_at: 13-Sep-23
             degree in Public Policy from the Hertie School and a Bachelor's in History from the University of Brasília.
         </p>
         <br>
-        <p>Coding the Past is a fusion of my two passions: data science and history. Please do not hesitate to
-            contact me. Feedback and suggestions are welcome! </p>
+        <p>Coding the Past is a fusion of my two passions: data science and history. I am open to collaborations and keen to offer tutoring or consultancy in data science applications. I hope to connect with you shortly.  </p>
     </div>
     <div class="contacts">
         <a href="https://www.linkedin.com/in/bruno-gasparotto-ponne-b6041810" target="_blank" class="button">LinkedIn</a>
