--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@ last_modified_at: 02-Sep-23
             src="/assets/images/women-programming.png" alt="Women programming the oldest computer.">
     </div>
     <div class="intro-text">
-        <h1>Data science for all</h1>
-        <p>Once the exclusive domain of hard sciences, statistical and digital methods have now opened their doors to humanists and social scientists. 
-            Welcome to a space dedicated to melding data science with the humanities and social sciences.
-            Dive into our programming lessons, sharpen your analytical skills, and bring your insights to life with effective visualizations and analyses.</p>
+        <p>
+            Dive into our programming lessons, sharpen your analytical skills, and bring your insights to life with effective visualizations and analyses.    
+            Whether you're a researcher seeking collaboration or an enthusiast wanting to broaden your knowledge base, you've come to the right place!</p>
+
     </div>
     <div class="latest-updates">
         <h1>CODING LESSONS</h1>
