--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ last_modified_at: 02-Sep-23
                         </div>
                         <div class="lesson-img-box">
                             <a class="lesson-link" href="{{ post.url }}">
-                                <img class="lesson-img" src="/assets/images/{{ post.image }}" alt="image related to the lesson">
+                                <img class="lesson-img" src="/assets/images/{{ post.image }}" alt="image related to the lesson" width="475" height="475">
                             </a>
                         </div>
                     </li>
