--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ last_modified_at: 02-Sep-23
     <div class="intro-text">
         <p>
             Dive into our R and Python programming lessons, sharpen your analytical skills, and bring your insights to life with in-depth analyses and effective visualizations. 
-            Whether you are conducting historical research or you are an enthusiast eager to expand your knowledge base, here is the place where you transform your understanding of humanities with the power of data science.</p>
+            Whether you are conducting historical research or you are an enthusiast eager to expand your knowledge base, here is the place where you transform your perspectives with the power of data science.</p>
 
     </div>
     <div class="latest-updates">
