--- a/about.html
+++ b/about.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 title: About
-description: Meet Bruno Ponne, the mind behind Coding the Past. Empowering historians and social scientists with data science insights. Connect with Bruno and explore the blend of history and data."
+description: Meet Bruno Ponne, the mind behind Coding the Past.
 keywords: history, data science, historian
-last_modified_at: 13-Sep-23
+last_modified_at: 23-Jun-24
 ---
 
 
@@ -11,11 +11,11 @@ last_modified_at: 13-Sep-23
 <div class="about-photo">
     <img src="/assets/images/bruno_3.png" alt="Bruno Ponne, founder of Coding the Past.">
     <div class="intro-contacts">
-        <p> I am Bruno Ponne, I help other historians and social scientists to learn data science. I hold a master's
+        <p> I am Bruno Ponne, I help other researchers to learn data analysis and data science. I hold a master's
             degree in Public Policy from the Hertie School and a Bachelor's in History from the University of Brasília.
         </p>
         <br>
-        <p>Coding the Past is a fusion of my two passions: data science and history. I am open to collaborations and keen to offer tutoring or consultancy in data science applications. I hope to connect with you shortly.  </p>
+        <p>Coding the Past is a fusion of my two passions: data science and history. I am open to collaborations and keen to help you with your data problems. I hope to connect with you shortly.  </p>
     </div>
     <div class="contacts">
         <a href="https://www.linkedin.com/in/bruno-gasparotto-ponne-b6041810" target="_blank" class="button">LinkedIn</a>
