new layout and new lesson

--- a/index.html
+++ b/index.html
@@ -5,20 +5,25 @@ keywords: social data science, python and r, historical data, statistics, data v
 description: Explore digital humanities with R and Python. Navigate historical datasets and use data science to enrich your research.
 last_modified_at: 02-Sep-23
 ---
-<div class="presentation-box">
+   <div class="presentation-box">
     <div class="presentation-box-img">
         <img class="intro-img"
-            title="Women programming the Electronic Numerical Integrator and Calculator (Wikimedia Commons)."
-            src="/assets/images/women-programming.png" alt="Women programming the oldest computer.">
+             title="Women programming the ENIAC (Wikimedia Commons)."
+             src="/assets/images/960px-Reprogramming_ENIAC.png" 
+             alt="Two women programming the ENIAC computer by plugging in cables.">
+        <p class="image-caption">
+            Women reprogramming the ENIAC (1946). Wikimedia, Public Domain.
+        </p>
     </div>
     <div class="intro-text">
         <p>
-            Dive into our R and Python programming lessons, sharpen your analytical skills, and bring your insights to life with in-depth analyses and effective visualizations. 
-            Whether you are conducting historical research or you are an enthusiast eager to expand your knowledge base, here is the place where you transform your perspectives with the power of data science.</p>
-
+            Here you find lessons to <b>sharpen your coding skills</b>, while learning about our past.
+            Whether you are conducting <b>research</b> or you are a <b>data enthusiast</b>, 
+            here is the place where you transform your perspectives with the <b>power of data</b>! Select a topic in the menu below and starting learning!
+        </p>
     </div>
+</div>
     <div class="latest-updates">
-        <br>
         {% assign all_tags = "" %}
         {% for post in site.posts %}
             {% for tag in post.tags %}
